[package]
name = "refcell"
version = "0.1.0"
authors = ["Mikkel Paulson <git@email.mikkel.ca>"]
edition = "2018"

[[bin]]
name = "gui"
required-features = ["gui"]

[features]
default = []
gui = []

[dependencies]
rand = "0.7.3"

[dependencies.druid]
version = "0.6.0"
features = ["svg"]
optional = true
