[package]
name = "refcell"
version = "0.1.0"
authors = ["Mikkel Paulson <git@email.mikkel.ca>"]
edition = "2021"

[[bin]]
name = "tui"
required-features = ["tui"]

[features]
default = []
#tui = ["dep:termion"]
tui = []

[dependencies]
rand = "0.7.3"

[dependencies.druid]
version = "0.6.0"
features = ["svg"]
optional = true

[dependencies.termion]
version = "1.5.0"
#optional = true
